--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "git+https://github.com/FurqanKhurrum/fragments.git"
   },
   "author": "Furqan Khurrum",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "prettier": "3.5.3"
+  }
 }
