--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,18 +30,17 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
-        
-  # Lint our Dockerfile using Hadolint
+
   dockerfile-lint:
     name: Dockerfile Lint
     runs-on: ubuntu-latest
     steps:
-      # https://github.com/marketplace/actions/hadolint-action
       - uses: actions/checkout@v4
+
       - uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
-      
+
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -57,3 +56,33 @@ jobs:
 
       - name: Install node dependencies and run tests
         run: npm install-ci-test
+
+  docker-hub:
+    name: Build and Push to Docker Hub
+    needs: [lint, dockerfile-lint, unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v6
+        env:
+          DOCKERHUB_REPO: username/fragments   # <--- Replace `username`!
+          SHA_TAG: sha-${{ github.sha }}
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.DOCKERHUB_REPO }}:${{ env.SHA_TAG }}
+            ${{ env.DOCKERHUB_REPO }}:main
+            ${{ env.DOCKERHUB_REPO }}:latest
