--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         env:
-          DOCKERHUB_REPO: username/fragments   # <--- Replace `username`!
+          DOCKERHUB_REPO: fkhurrum/fragments   # <--- Replace `username`!
           SHA_TAG: sha-${{ github.sha }}
         with:
           context: .
