--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Build and push to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPO: 470742339740.dkr.ecr.us-east-1.amazonaws.com/fragments
+          ECR_REPO: fragments
           VERSION_TAG: ${{ github.ref_name }}
         uses: docker/build-push-action@v6
         with:
