Fix backend detection for IAM roles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - AWS_SESSION_TOKEN=test
       - AWS_REGION=us-east-1
       - AWS_S3_ENDPOINT_URL=http://localstack:4566
+      - AWS_DYNAMODB_ENDPOINT_URL=http://dynamodb-local:8000
     ports:
       - '3000:3000'
     # Override the default command to avoid using dotenv-cli
