--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test:watch": "jest -c jest.config.js --runInBand --watch --",
     "test": "jest -c jest.config.js --runInBand --",
-    "test:integration": "cross-env PORT=3000 LOG_LEVEL=debug HTPASSWD_FILE=tests/.htpasswd API_URL=http://localhost:3000 hurl --test tests/integration/health-check.hurl tests/integration/404.hurl tests/integration/post-fragments.hurl tests/integration/post-fragments-unsupported-type.hurl tests/integration/post-fragments-charset.hurl tests/integration/post-fragments-unauthenticated.hurl tests/integration/post-fragments-json.hurl tests/integration/post-fragments-image.hurl tests/integration/put-fragments.hurl tests/integration/lab-9-s3.hurl tests/integration/lab-10-dynamodb.hurl",
+    "test:integration": "cross-env PORT=3000 LOG_LEVEL=debug HTPASSWD_FILE=tests/.htpasswd API_URL=http://localhost:3000 hurl --test tests/integration/health-check.hurl tests/integration/404.hurl tests/integration/post-fragments.hurl tests/integration/post-fragments-unsupported-type.hurl tests/integration/post-fragments-charset.hurl tests/integration/post-fragments-unauthenticated.hurl tests/integration/post-fragments-json.hurl tests/integration/post-fragments-image.hurl tests/integration/lab-9-s3.hurl tests/integration/lab-10-dynamodb.hurl",
     "test:integration:ci": "hurl --test tests/integration/*.hurl",
     "coverage": "jest -c jest.config.js --runInBand --coverage",
     "lint": "eslint \"./src/**/*.js\" \"tests/**/*.js\"",
@@ -38,12 +38,16 @@
     "@aws-sdk/lib-dynamodb": "^3.864.0",
     "aws-jwt-verify": "^5.1.0",
     "compression": "^1.8.0",
+    "content-type": "1.0.5",
     "cors": "^2.8.5",
+    "csvtojson": "2.0.10",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "html-to-text": "9.0.5",
     "http-auth": "^4.2.1",
     "http-auth-passport": "^1.0.7",
+    "markdown-it": "13.0.1",
     "marked": "^9.1.6",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
