--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::<ACCOUNT_ID>:role/github-ci-ecr-ecs   # <-- REPLACE
+          role-to-assume: arn:aws:iam::470742339740:role/github-ci-ecr-ecs
           aws-region: us-east-1
 
       # 4) Login to ECR
@@ -44,7 +44,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPO: fragments
-          VERSION_TAG: ${{ github.ref_name }}  # e.g., v0.7.0
+          VERSION_TAG: ${{ github.ref_name }}
         with:
           context: .
           push: true
