--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::470742339740:role/github-ci-ecr-ecs
+          role-to-assume: arn:aws:iam::470742339740:role/LabRole
           aws-region: us-east-1
 
       # 4) Login to ECR
