--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,10 +27,12 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # 3) Configure AWS creds via GitHub OIDC (no static keys)
-      - name: Configure AWS credentials (OIDC)
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::470742339740:role/LabRole
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: us-east-1
 
       # 4) Login to ECR
