--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "html-to-text": "9.0.5",
     "http-auth": "^4.2.1",
     "http-auth-passport": "^1.0.7",
-    "markdown-it": "13.0.1",
+    "markdown-it": "^13.0.1",
     "marked": "^9.1.6",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
